--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #36b61e; }
+  background: #0fb3ec; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a16f83; }
+  background: #3024d2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #0d655a; }
+  background: #bc0240; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #9bc7fc; }
+  background: #efaffd; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #8ba43d; }
+  background: #b24c09; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #92cdae; }
+  background: #753544; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #45cd12; }
+  background: #65cc05; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #7de1b2; }
+  background: #311781; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a62a70; }
+  background: #eba2bd; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #9fe16b; }
+  background: #0e4442; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #5d9c25; }
+  background: #4e4034; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #70aa7c; }
+  background: #24a215; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c10db2; }
+  background: #c8de11; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ec7cfd; }
+  background: #a5dd64; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #56515c; }
+  background: #8a61b9; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ee7189; }
+  background: #ecf85c; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1910fd; }
+  background: #f377e4; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #cd015e; }
+  background: #7c38be; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #815242; }
+  background: #fb2277; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e7499c; }
+  background: #86595e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #4e40b1; }
+  background: #9e9aee; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #81dd07; }
+  background: #ce7371; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #2957b9; }
+  background: #ac9275; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b54d1e; }
+  background: #9c3ac2; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a8f9bd; }
+  background: #e09e54; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ef5701; }
+  background: #5ce94d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c3bc85; }
+  background: #71ae66; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #647ba2; }
+  background: #5633ee; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #796a5f; }
+  background: #494b0b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b5f6a1; }
+  background: #6840aa; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #931ada; }
+  background: #2c6c89; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4cbdc1; }
+  background: #cde4e0; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f9de3c; }
+  background: #da9243; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8e9cf8; }
+  background: #c630cf; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #706999; }
+  background: #d3acad; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ed24dd; }
+  background: #f002c7; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8378c1; }
+  background: #e2aae1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #8bc864; }
+  background: #d9afcb; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b2ddea; }
+  background: #a55e94; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5cad81; }
+  background: #9d36db; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #67483f; }
+  background: #fd2845; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #287678; }
+  background: #f22f57; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #1951d0; }
+  background: #7c8d76; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #11453b; }
+  background: #6fea16; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #664bed; }
+  background: #31c2c5; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #ac7cd3; }
+  background: #1bcb93; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #673a79; }
+  background: #9b30a1; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d1fccb; }
+  background: #6501dd; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b5db69; }
+  background: #80f254; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #60428e; }
+  background: #26ed54; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #2682b2; }
+  background: #48d968; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d757e5; }
+  background: #c9c35a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f049f5; }
+  background: #b8c21a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #545beb; }
+  background: #e3e414; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8ed493; }
+  background: #73c419; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b13ae5; }
+  background: #28424c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #3165d8; }
+  background: #d79761; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #887d97; }
+  background: #63ae80; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c8ab39; }
+  background: #6d5066; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #fb8cc7; }
+  background: #f8f9aa; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #52b236; }
+  background: #2017b9; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #6baec9; }
+  background: #01fcf7; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #492238; }
+  background: #ee6406; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #780ef4; }
+  background: #754539; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #41262a; }
+  background: #4aa6d7; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #b51844; }
+  background: #54906e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #7497b9; }
+  background: #304f8c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #052209; }
+  background: #74d025; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #2f2161; }
+  background: #10b0a6; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #c89fe3; }
+  background: #0f0c5a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #36ce77; }
+  background: #f94720; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #06a419; }
+  background: #285aab; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #212e70; }
+  background: #a19ce8; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #dcb13e; }
+  background: #dc50ca; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #fad052; }
+  background: #c4c3ff; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #0586ed; }
+  background: #1dd324; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #3b2534; }
+  background: #84a8a6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d4d37d; }
+  background: #e969c7; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #417729; }
+  background: #b1cfbf; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #d9cd26; }
+  background: #29f0ac; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #42fa79; }
+  background: #cc6992; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #3f5487; }
+  background: #94ea65; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #6fcd2c; }
+  background: #0b594a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #8da814; }
+  background: #ce8052; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b0ced4; }
+  background: #8433a7; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #bf887b; }
+  background: #8b68c9; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d6dcce; }
+  background: #ccf5db; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b9ffb1; }
+  background: #806958; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a332d9; }
+  background: #cee903; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #19eb7a; }
+  background: #bfc8ba; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #6dc666; }
+  background: #d8762e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #29ba9d; }
+  background: #cbbadf; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ec029c; }
+  background: #ea653b; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #7f50e7; }
+  background: #582866; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #90036e; }
+  background: #8e79be; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #34476b; }
+  background: #710914; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #10aff2; }
+  background: #10d327; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #3c4cd4; }
+  background: #dcb25b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #94c65d; }
+  background: #a78983; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #7028c9; }
+  background: #e5d55e; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12550,8 +12550,8 @@ td .check-container {
   border-color: transparent transparent #56bcd9 transparent; }
 
 .head {
-  padding: 10px 15px;
-  border-radius: 3px 3px 0px 0px;
+  padding: 15px;
+  border-radius: 8px 8px 0px 0px;
   background: #56bcd9; }
   .head a {
     margin: 0px; }
