--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2189,8 +2189,8 @@ td {
 }
 
 .head {
-  padding: 10px 15px;
-  border-radius: 3px 3px 0px 0px;
+  padding: 15px;
+  border-radius: 8px 8px 0px 0px;
   background: #56bcd9;
 
   a {
